--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,25 +1,52 @@
-.parametros {
-    background-color: rgb(186, 186, 219);
-    color: rgb(212, 16, 16);
+
+header h1{
+    background-color: rgb(204, 127, 25);
+    color: white;
     text-align: center;
     border-radius: 2px;
-    padding: .6rem;
+    padding: .6rem 0;
     text-transform: capitalize;
     max-width: 80%;
     margin: 0 auto;
-    cursor: pointer;
-    transition: .3s ease-in;
 }
-    .fondo-negro{
-        background-color: black;
 
 
 
 
+nav ul {
+    display: flex;
+    flex-direction: row;
+    justify-content:space-evenly;
 
 
-
-
+    list-style: none;
+    background-color: blue;
+    max-width: 80%;
+    margin: 0 auto;
+    margin-top: 1rem;
+    color: whitesmoke;
+    padding-top: .6rem;
+    padding-bottom: .6rem;
+    border-radius: .3;
 
 
 }
+
+nav ul li{
+    text-align: center;
+
+
+}
+@media(max-width:376px){
+    nav ul{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: flex-start;
+
+    }
+    hr{
+        display: block;
+        max-width: 90%;
+    }
+    }
